# paperef

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
paper2md/: __init__.py
paper2md/bibtex/: __init__.py  scholar_scraper.py
paper2md/cli/: main.py
paper2md/core/: bibtex_generator.py
paperef/: __init__.py
paperef/bibtex/: __init__.py  scholar_scraper.py
paperef/cli/: __init__.py  main.py
paperef/core/: __init__.py  batch_processor.py  bibtex_generator.py  cache_manager.py  doi_enricher.py  folder_manager.py  pdf_processor.py
paperef/tests/: conftest.py  test_cache_manager.py  test_cli.py  test_config.py  test_doi_enricher.py  test_file_utils.py  test_folder_manager.py  test_pdf_processor.py
paperef/tools/: README.md  extract_bibtex_selenium.py  extract_doi_bibtex.py  extract_sections.py  requirements.txt
paperef/utils/: config.py  file_utils.py  logging_config.py  performance.py
tools/: extract_bibtex_selenium.py  extract_sections.py
