[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper2md"
version = "0.1.0"
description = "PDF to Markdown converter with automatic BibTeX generation"
authors = [
    {name = "Alan Synn", email = "alan@alansynn.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.0.0,<2.48.0",
    "selenium>=4.9.0,<4.16.0",
    "bibtexparser>=1.4.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "pathlib2>=2.3.0",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
vlm = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0"
]

[project.scripts]
paper2md = "paper2md.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["paper2md"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
